style.css
body{

	font-family: 'Montserrat', sans-serif;
}

main{

	margin: 0 ;
	box-sizing: border-box;
	display: flex;
	align-items: center;
	flex-direction: column;

	


}

.searchBar{

	width: 90%;
	height: 62px;
	background: #1C1C1C;
	border-radius: 68px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin: 94px 0px 94px 0 ;

}

.searchBar--hamburger{

	width: 37px;
	height: 17px;
	margin: 22px 32px;

}

.searchBar--search{

	height: 40.81px;
	width: 40.81px;
	margin: 22px 32px;

}


.clientItems{

	display: grid;
	grid-template-columns: 1fr;
	justify-items: center;
	grid-gap: 112px;

}


.clientItems--card{

	background: #1C1C1C;
	border-radius: 18px;
	width: 318px;
	height: 337px;
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 0 0 112px 0;

}

.clientItems--card--img{

	width: 293px;
	height: 154px;
	margin-top: 11px;

	
}

.clientItems--card--header{

	font-weight: 700;
	font-size: 20px;
	line-height: 24px;
	color: #fff;
	margin: 21px 0 21px 0;
	
}

.clientItems--card--text{

	font-weight: 700;
	font-size: 16px;
	line-height: 20px;
	color: #fff;
	text-align: center;
	margin: 21px 0 21px 0;

}

/*
==============================
Media Queries to resize grid
==============================

*/

@media(min-width: 850px){


	.clientItems {

		grid-template-columns: 1fr 1fr;

	}

}

@media(min-width: 1260px){


	.clientItems {

		grid-template-columns: 1fr 1fr 1fr;

	}

}

